fix(reactBigCalendarAdapter): fix z-index for overlay
consta-design-system/uikit#2441

--- a/src/adapters/reactBigCalendarAdapter/ReactBigCalendarAdapter.css
+++ b/src/adapters/reactBigCalendarAdapter/ReactBigCalendarAdapter.css
@@ -798,6 +798,7 @@
 }
 
 .rbc-overlay {
+  z-index: 2;
   max-width: 300px;
   background: #fff;
   border: 1px solid rgba(0, 65, 102, 0.2);
